// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Builder (style1) > should build nested elements and relTo 1`] = `
{
  "_stage": "parsed",
  "deployments": {
    "elements": {},
    "relations": {},
  },
  "elements": {
    "s1": {
      "id": "s1",
      "kind": "system",
      "style": {
        "color": "green",
        "opacity": 10,
        "size": "lg",
      },
      "title": "s1",
    },
    "s1.c1": {
      "id": "s1.c1",
      "kind": "component",
      "style": {
        "shape": "browser",
        "textSize": "sm",
      },
      "title": "c1",
    },
    "s2": {
      "id": "s2",
      "kind": "system",
      "style": {
        "color": "green",
        "opacity": 10,
        "size": "lg",
      },
      "title": "s2",
    },
    "s2.c1": {
      "id": "s2.c1",
      "kind": "component",
      "style": {
        "shape": "browser",
        "textSize": "sm",
      },
      "title": "Component s2.1",
    },
    "s2.c1.c2": {
      "id": "s2.c1.c2",
      "kind": "component",
      "style": {
        "shape": "browser",
        "textSize": "sm",
      },
      "title": "Component s2.1.2",
    },
    "s2.c1.c2.c3": {
      "id": "s2.c1.c2.c3",
      "kind": "component",
      "style": {
        "shape": "browser",
        "textSize": "sm",
      },
      "title": "c3",
    },
  },
  "globals": {
    "dynamicPredicates": {},
    "predicates": {},
    "styles": {},
  },
  "imports": {},
  "project": {
    "id": "from-builder",
  },
  "projectId": "from-builder",
  "relations": {
    "rel1": {
      "id": "rel1",
      "source": {
        "model": "s2.c1.c2.c3",
      },
      "target": {
        "model": "s1.c1",
      },
      "title": "relation from s2.1.2.3 to s1.1",
    },
    "rel2": {
      "id": "rel2",
      "source": {
        "model": "s2.c1",
      },
      "target": {
        "model": "s1.c1",
      },
      "title": "relation from s2.1 to s1.1",
    },
    "rel3": {
      "id": "rel3",
      "source": {
        "model": "s1.c1",
      },
      "target": {
        "model": "s2.c1.c2",
      },
      "title": "relation from s1.1 to s2.1.2",
    },
  },
  "specification": {
    "customColors": {},
    "deployments": {},
    "elements": {
      "component": {
        "style": {
          "shape": "browser",
          "textSize": "sm",
        },
      },
      "system": {
        "style": {
          "color": "green",
          "opacity": 10,
          "size": "lg",
        },
      },
    },
    "relationships": {},
    "tags": {
      "tag1": {
        "color": "#FFF",
      },
      "tag2": {},
    },
  },
  "views": {},
}
`;

exports[`Builder (style1) > should build view  1`] = `
{
  "_stage": "parsed",
  "deployments": {
    "elements": {},
    "relations": {},
  },
  "elements": {
    "c1": {
      "id": "c1",
      "kind": "component",
      "style": {},
      "title": "c1",
    },
    "c2": {
      "id": "c2",
      "kind": "component",
      "style": {},
      "title": "c2",
    },
    "c3": {
      "id": "c3",
      "kind": "component",
      "style": {},
      "title": "c3",
    },
  },
  "globals": {
    "dynamicPredicates": {},
    "predicates": {},
    "styles": {},
  },
  "imports": {},
  "project": {
    "id": "from-builder",
  },
  "projectId": "from-builder",
  "relations": {},
  "specification": {
    "customColors": {},
    "deployments": {},
    "elements": {
      "component": {},
    },
    "relationships": {},
    "tags": {},
  },
  "views": {
    "1": {
      "_stage": "parsed",
      "_type": "element",
      "description": null,
      "id": "1",
      "rules": [
        {
          "include": [
            {
              "wildcard": true,
            },
          ],
        },
      ],
      "tags": [],
      "title": "View 1",
    },
    "2": {
      "_stage": "parsed",
      "_type": "element",
      "description": null,
      "id": "2",
      "rules": [
        {
          "include": [
            {
              "wildcard": true,
            },
          ],
        },
        {
          "include": [
            {
              "ref": {
                "model": "c2",
              },
              "selector": "children",
            },
          ],
        },
      ],
      "tags": [],
      "title": "view 2",
    },
    "3": {
      "_stage": "parsed",
      "_type": "element",
      "description": null,
      "id": "3",
      "rules": [
        {
          "include": [
            {
              "ref": {
                "model": "c3",
              },
              "selector": "expanded",
            },
          ],
        },
      ],
      "tags": [],
      "title": "",
    },
  },
}
`;

exports[`Builder (style1) > should build viewOf  1`] = `
{
  "_stage": "parsed",
  "deployments": {
    "elements": {},
    "relations": {},
  },
  "elements": {
    "c1": {
      "id": "c1",
      "kind": "component",
      "style": {},
      "title": "c1",
    },
    "c2": {
      "id": "c2",
      "kind": "component",
      "style": {},
      "title": "c2",
    },
    "c2.c3": {
      "id": "c2.c3",
      "kind": "component",
      "style": {},
      "title": "c3",
    },
    "c2.c3.c4": {
      "id": "c2.c3.c4",
      "kind": "component",
      "style": {},
      "title": "c4",
    },
  },
  "globals": {
    "dynamicPredicates": {},
    "predicates": {},
    "styles": {},
  },
  "imports": {},
  "project": {
    "id": "from-builder",
  },
  "projectId": "from-builder",
  "relations": {},
  "specification": {
    "customColors": {},
    "deployments": {},
    "elements": {
      "component": {},
    },
    "relationships": {},
    "tags": {},
  },
  "views": {
    "1": {
      "_stage": "parsed",
      "_type": "element",
      "description": null,
      "id": "1",
      "rules": [
        {
          "include": [
            {
              "wildcard": true,
            },
          ],
        },
        {
          "include": [
            {
              "inout": {
                "ref": {
                  "model": "c2.c3",
                },
                "selector": "children",
              },
            },
          ],
        },
        {
          "exclude": [
            {
              "source": {
                "ref": {
                  "model": "c1",
                },
                "selector": "expanded",
              },
              "target": {
                "ref": {
                  "model": "c2.c3",
                },
                "selector": "children",
              },
            },
          ],
        },
      ],
      "tags": [],
      "title": "View 1",
      "viewOf": "c1",
    },
  },
}
`;
